<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Stadium Types-->
    <string name="Local">Local</string>
    <string name="Visitor">Visitante</string>

    <string name="app_name">Basket Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Nombre">Nombre</string>
    <string name="Password">Password</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_selec_team">SelecTeamAct</string>
    <string name="title_activity_new_user">NewUserAct</string>
    <string name="Passwordrepite">Repite Password</string>
    <string name="Correo">Mail</string>
    <string name="title_activity_frag_listequip2">Frag_listequip2</string>
    <string name="title_activity_frag_equiplista">Frag_equiplista</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Crear_Equipo">Creacion de Equipo</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Crear">Crear</string>
    <string name="Nom_Usuario">Nom_Usuario</string>
    <string name="Nom_Equip">Nom_Equip</string>
    <string name="Ciud_Equip">Ciud_Equip</string>
    <string name="Jugadores_team">Jugadores</string>
    <string name="Partidos_jugados">Partidos</string>
    <string name="Jugar_team">Jugar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Ciudades">Ciudades</string>
    <string name="Provincia">Provincia</string>
    <string name="Agregar">Agregar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="title_activity_partidos">PartidosAct</string>
    <string name="Mail">Mail</string>
    <string name="Final">Final</string>
    <string name="Atras">Atras</string>
    <string name="title_activity_jugadores">JugadoresAct</string>
    <string name="Apellido">Apellido</string>
    <string name="Altura">Altura</string>
    <string name="Posicion">Posicion</string>
    <string name="Peso">Peso</string>
    <string name="Numero">Numero</string>
    <string name="Juegos">Juegos</string>
    <string name="Anotaciones">Anot.</string>
    <string name="Disparos">Disparos</string>
    <string name="Triples">Triples</string>
    <string name="Dobles">Dobles</string>
    <string name="Simples">Simples</string>
    <string name="PorcentajeEfectividad">Efect:</string>
    <string name="Robos">Robos</string>
    <string name="Tapas">Tapas</string>
    <string name="Asistencias">Asist.</string>
    <string name="Rebounds">Reb</string>
    <string name="Rebound">Rebote</string>
    <string name="Def">Def</string>
    <string name="Ofen">Ofen</string>
    <string name="Rol">Rol</string>
    <string name="Puntos">Puntos</string>
    <string name="Fules">Fules</string>
    <string name="Lanzamientos">Lanz.</string>
    <string name="Acertados">Acert.</string>
    <string name="Fallidos">Fallidos</string>
    <string name="Fecha">Fecha</string>
    <string name="Defensivos">Defensivos</string>
    <string name="Ofensivos">Ofensivos</string>
    <string name="LogOut">Log Out</string>
    <string name="NewTeam">Nuevo</string>
    <string name="Jugadores">Jugadores</string>
    <string name="Kg">Kg</string>
    <string name="Nuevo_Jugador">Nuevo Jugador</string>
    <string name="NoFoto">No se encontro la imagen</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="Points">Puntos</string>
    <string name="PlayerStatistics">Estadisticas</string>
    <string name="Shoot">Lanzamiento</string>
    <string name="RemoveShoot">Eliminar Lanzamiento</string>
    <string name="Scored">Acertado</string>
    <string name="Failed">Fallido</string>
    <string name="SelectPlayerError">Debe seleccionar un jugador</string>
    <string name="Defensive">Defensivo</string>
    <string name="Ofensive">Ofensivo</string>
    <string name="Foul">Falta</string>
    <string name="NoHaveRebounds">No existen rebotes para ese jugador</string>
    <string name="NoHaveFouls">No existen faltas para este jugador</string>
    <string name="NoHaveSteals">No existen robos para este jugador</string>
    <string name="NoHaveBlocks">No existen tapas para este jugador</string>
    <string name="NoHaveAssistances">No existen asistencias para este jugador</string>
    <string name="NoHaveThisShot">No existen lanzamientos de ese tipo para eliminar</string>
    <string name="CompleteFields">Los campos deben estar completos</string>
    <string name="NoShootToDelete">No existe lanzamiento para borrar de ese jugador</string>
    <string name="DeleteRebound">Eliminar rebote</string>
    <string name="DeleteFoul">Eliminar falta</string>
    <string name="TeamPointsMarker">Puntos</string>
    <string name="FoulsMarker">F</string>
    <string name="Quarter_control_widget">Cuarto</string>
    <string name="QuarterExtension">EXT</string>
    <string name="FinishGame">F</string>
    <string name="Yes">Si</string>
    <string name="No">No</string>
    <string name="Select_player">Seleccione Jugador</string>
    <string name="Was_assisted">Fue asistido?</string>
    <string name="Stadium">Estadio :</string>
    <string name="Assistances">Asist.</string>
    <string name="Victory">Victoria</string>
    <string name="Defeat">Derrota</string>
    <string name="Draw">Empate</string>


    <!-- Messages-->
    <string name="FoulAddedMessage">Falta agregada</string>
    <string name="StealAddedMessage">Robo agregado</string>
    <string name="ReboundAddedMessage">Rebote agregado</string>
    <string name="BlockAddedMessage">Tapa agregada</string>
    <string name="AssistanceAddedMessage">Asistencia agregada</string>
    <string name="AllDeleteMessage">Eliminado</string>
    <string name="SimpleDeleteMessage">Simple Eliminado</string>
    <string name="DoubleDeleteMessage">Doble Eliminado</string>
    <string name="TripleDeleteMessage">Triple Eliminado</string>
    <string name="Assistance_added">Asistencia agregada</string>
    <string name="Game_Information">Informacion del Partido</string>
    <string name="Opponent_Name">Contrincante</string>
    <string name="Continue">Continuar</string>
    <string name="Name_must_more_or_equal_3_to_10">El nombre debe tener entre 3 y 10 caracteres</string>
    <string name="Q1">Q1</string>
    <string name="Q2">Q2</string>
    <string name="Q3">Q3</string>
    <string name="Q4">Q4</string>
    <string name="EXT">EXT</string>
    <string name="EndOfGame">Fin del Juego</string>
    <string name="DeleteTeam">Eliminar Equipo?</string>
    <string name="DeletePlayer">Eliminar Jugador?</string>
    <string name="NoPlayers">Sin Jugadores</string>
    <string name="AddPlayer">Agregar Jugador</string>
    <string name="games_circle_text">J</string>
    <string name="wins_circle_text">G</string>
    <string name="loses_circle_text">P</string>
    <string name="History">Historial</string>
    <string name="UserCreation">Creacion de Usuario</string>
    <string name="NoEqualsPassword">El password no coincide</string>
    <string name="BasketballAssistantTittle">Basketball Assistant</string>
    <string name="LogIn">Ingresar</string>
    <string name="SingIn">Registrarse</string>

    <string name="simple_shoot_btn">Simple</string>
    <string name="double_shoot_btn">Doble</string>
    <string name="triple_shoot_btn">Triple</string>
    <string name="OpponentsPointsInQuarterResume">Op.P</string>
    <string name="Team">Equipo</string>
    <string name="title_activity_wearable_configuration">Basketball Assistant</string>
    <string name="WatchfaceConfigurationTitle">Configuracion del WatchFace</string>
    <string name="RefreshTimeText">Frecuencia de Refresco:</string>
    <string name="LocalizationText">Localizacion:</string>
    <string name="Confirm">Confirmar</string>

    <array name="time_to_refresh">
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>2 horas</item>
        <item>3 horas</item>
    </array>

    <string name="rebound_button_text">Rebote</string>
    <string name="steal_button_text">Robo</string>
    <string name="block_button_text">Tapa</string>
    <string name="foul_button_text">Falta</string>
    <string name="assistance_button_text">Asist</string>

    <string name="whitout_shoots">--</string>
    <string name="logout_message">Seguro quiere desloguearse?</string>
    <string name="Borrar">Eliminar</string>
    <string name="delete_team_message">Desea eliminar el equipo?</string>
    <string name="NombreUsuario">Nombre de Usuario</string>
    <string name="AddTeam">Nuevo equipo</string>
    <string name="new_team_fragment_TAG">NewTeamFragmentTAG</string>

</resources>
