<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top|center"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Game_Information"
        android:id="@+id/tvTitle"
        style="@style/Text_Style_X"
        android:textColor="@color/Celeste_Letras" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etOpponentName"
        android:gravity="center"
        android:hint="@string/Opponent_Name"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stadium"
        android:id="@+id/tvStaticStadium"
        android:paddingTop="5dp"
        style="@style/Text_Style_L" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Local"
            android:id="@+id/rbLocal"
            android:layout_marginRight="5dp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Visitor"
            android:id="@+id/rbVisitor"
            android:layout_marginLeft="5dp" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:id="@+id/bOk"
        android:layout_marginTop="15dp"
        style="@style/ButtonLightBlueStyle1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
</LinearLayout>