<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top|center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/layout_bg_bottomline">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Shoot"
            android:id="@+id/tvTitle"
            android:textColor="@color/Gris_2_score" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/layout_bg_standard"
        android:paddingTop="5dp">

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/Failed"
            android:id="@+id/bFailed"
            style="@style/ButtonDeleteStyle1" />

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/Scored"
            android:id="@+id/bScored"
            style="@style/ButtonGreenStyle1"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

</LinearLayout>