<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top|center"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EndOfGame"
        android:id="@+id/tvTitle" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/points_box_bg"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:id="@+id/tvE1Points" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/points_box_bg"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:id="@+id/tvE2Points" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:id="@+id/tvStatus" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:dividerPadding="20dp">

                <TextView
                    android:layout_width="@dimen/width_column"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1"
                    android:id="@+id/textView4"
                    android:gravity="center" />

                <TextView
                    android:layout_width="@dimen/width_column"
                    android:layout_height="wrap_content"
                    android:text="@string/Q2"
                    android:id="@+id/textView5"
                    android:gravity="center" />

                <TextView
                    android:layout_width="@dimen/width_column"
                    android:layout_height="wrap_content"
                    android:text="@string/Q3"
                    android:id="@+id/textView6"
                    android:gravity="center" />

                <TextView
                    android:layout_width="@dimen/width_column"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4"
                    android:id="@+id/textView7"
                    android:gravity="center" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:id="@+id/tvQ1"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:id="@+id/tvQ2"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:id="@+id/tvQ3"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:id="@+id/tvQ4"
                    android:gravity="center" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/extLayout">

            <TextView
                android:layout_width="@dimen/width_column"
                android:layout_height="wrap_content"
                android:text="@string/EXT"
                android:id="@+id/textView2"
                android:gravity="center"
                android:textColor="@color/Verde_oscuro_1" />

            <TextView
                android:layout_width="@dimen/width_column"
                android:layout_height="wrap_content"
                android:text="00"
                android:id="@+id/tvExt"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Continue"
        android:id="@+id/bContinue"
        android:layout_marginTop="9dp"
        style="@style/ButtonGreenStyle1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>