<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/left_padding_staticsBoxW"
        android:paddingTop="@dimen/height_width_right_padding_staticsBoxW"
        android:paddingRight="@dimen/height_width_right_padding_staticsBoxW"
        android:paddingBottom="@dimen/height_width_right_padding_staticsBoxW"
        android:background="@drawable/layout_bg_leftline">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlayerStatistics"
                android:id="@+id/textView2" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Puntos"
                    android:id="@+id/textView"
                    android:layout_marginRight="@dimen/right_margin_text_staticsBoxW"
                    style="@style/Text_Style_S" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPoints"
                    style="@style/Text_Style_S" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rebotes"
                    android:id="@+id/textView3"
                    android:layout_marginRight="@dimen/right_margin_text_staticsBoxW"
                    style="@style/Text_Style_S" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRebounds"
                    style="@style/Text_Style_S" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Robos"
                    android:id="@+id/textView4"
                    android:layout_marginRight="@dimen/right_margin_text_staticsBoxW"
                    style="@style/Text_Style_S" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSteals"
                    style="@style/Text_Style_S" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tapas"
                    android:id="@+id/textView7"
                    android:layout_marginRight="@dimen/right_margin_text_staticsBoxW"
                    style="@style/Text_Style_S" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvBlocks"
                    style="@style/Text_Style_S" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Fules"
                    android:id="@+id/textView9"
                    android:layout_marginRight="@dimen/right_margin_text_staticsBoxW"
                    style="@style/Text_Style_S" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFouls"
                    style="@style/Text_Style_S" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>